// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ResultItem /> when the result fails should match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ResultItem
    result={
      Object {
        "id": 2,
        "runtime": 123456,
        "succeeded": false,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="h-10 w-100 pb2 flex justify-between items-center"
        >
          <div
            className="b dark-red"
            data-role="result-status"
          >
            Failed
          </div>
          <div
            className="silver"
          >
            2 minutes 3.46 seconds
          </div>
        </div>,
        <div
          className="h-90 w-100 ba b--moon-gray"
          data-role="result-editor"
        >
          <Editor
            name="code-editor-2"
            onChange={[Function]}
            readOnly={true}
            value={undefined}
          />
        </div>,
      ],
      "className": "h-100 w-100 pa3 bg-white ba b--moon-gray",
      "data-role": "result-item-2",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="b dark-red"
              data-role="result-status"
            >
              Failed
            </div>,
            <div
              className="silver"
            >
              2 minutes 3.46 seconds
            </div>,
          ],
          "className": "h-10 w-100 pb2 flex justify-between items-center",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Failed",
              "className": "b dark-red",
              "data-role": "result-status",
            },
            "ref": null,
            "rendered": "Failed",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "2 minutes 3.46 seconds",
              "className": "silver",
            },
            "ref": null,
            "rendered": "2 minutes 3.46 seconds",
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Editor
            name="code-editor-2"
            onChange={[Function]}
            readOnly={true}
            value={undefined}
          />,
          "className": "h-90 w-100 ba b--moon-gray",
          "data-role": "result-editor",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "name": "code-editor-2",
            "onChange": [Function],
            "readOnly": true,
            "value": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="h-10 w-100 pb2 flex justify-between items-center"
          >
            <div
              className="b dark-red"
              data-role="result-status"
            >
              Failed
            </div>
            <div
              className="silver"
            >
              2 minutes 3.46 seconds
            </div>
          </div>,
          <div
            className="h-90 w-100 ba b--moon-gray"
            data-role="result-editor"
          >
            <Editor
              name="code-editor-2"
              onChange={[Function]}
              readOnly={true}
              value={undefined}
            />
          </div>,
        ],
        "className": "h-100 w-100 pa3 bg-white ba b--moon-gray",
        "data-role": "result-item-2",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="b dark-red"
                data-role="result-status"
              >
                Failed
              </div>,
              <div
                className="silver"
              >
                2 minutes 3.46 seconds
              </div>,
            ],
            "className": "h-10 w-100 pb2 flex justify-between items-center",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Failed",
                "className": "b dark-red",
                "data-role": "result-status",
              },
              "ref": null,
              "rendered": "Failed",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "2 minutes 3.46 seconds",
                "className": "silver",
              },
              "ref": null,
              "rendered": "2 minutes 3.46 seconds",
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Editor
              name="code-editor-2"
              onChange={[Function]}
              readOnly={true}
              value={undefined}
            />,
            "className": "h-90 w-100 ba b--moon-gray",
            "data-role": "result-editor",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "name": "code-editor-2",
              "onChange": [Function],
              "readOnly": true,
              "value": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<ResultItem /> when the result succeeds should match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ResultItem
    result={
      Object {
        "id": 1,
        "runtime": 123,
        "succeeded": true,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="h-10 w-100 pb2 flex justify-between items-center"
        >
          <div
            className="b dark-green"
            data-role="result-status"
          >
            Success
          </div>
          <div
            className="silver"
          >
            123 milliseconds
          </div>
        </div>,
        <div
          className="h-90 w-100 ba b--moon-gray"
          data-role="result-editor"
        >
          <Editor
            name="code-editor-1"
            onChange={[Function]}
            readOnly={true}
            value={undefined}
          />
        </div>,
      ],
      "className": "h-100 w-100 pa3 bg-white ba b--moon-gray",
      "data-role": "result-item-1",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="b dark-green"
              data-role="result-status"
            >
              Success
            </div>,
            <div
              className="silver"
            >
              123 milliseconds
            </div>,
          ],
          "className": "h-10 w-100 pb2 flex justify-between items-center",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Success",
              "className": "b dark-green",
              "data-role": "result-status",
            },
            "ref": null,
            "rendered": "Success",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "123 milliseconds",
              "className": "silver",
            },
            "ref": null,
            "rendered": "123 milliseconds",
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Editor
            name="code-editor-1"
            onChange={[Function]}
            readOnly={true}
            value={undefined}
          />,
          "className": "h-90 w-100 ba b--moon-gray",
          "data-role": "result-editor",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "name": "code-editor-1",
            "onChange": [Function],
            "readOnly": true,
            "value": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="h-10 w-100 pb2 flex justify-between items-center"
          >
            <div
              className="b dark-green"
              data-role="result-status"
            >
              Success
            </div>
            <div
              className="silver"
            >
              123 milliseconds
            </div>
          </div>,
          <div
            className="h-90 w-100 ba b--moon-gray"
            data-role="result-editor"
          >
            <Editor
              name="code-editor-1"
              onChange={[Function]}
              readOnly={true}
              value={undefined}
            />
          </div>,
        ],
        "className": "h-100 w-100 pa3 bg-white ba b--moon-gray",
        "data-role": "result-item-1",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="b dark-green"
                data-role="result-status"
              >
                Success
              </div>,
              <div
                className="silver"
              >
                123 milliseconds
              </div>,
            ],
            "className": "h-10 w-100 pb2 flex justify-between items-center",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Success",
                "className": "b dark-green",
                "data-role": "result-status",
              },
              "ref": null,
              "rendered": "Success",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "123 milliseconds",
                "className": "silver",
              },
              "ref": null,
              "rendered": "123 milliseconds",
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Editor
              name="code-editor-1"
              onChange={[Function]}
              readOnly={true}
              value={undefined}
            />,
            "className": "h-90 w-100 ba b--moon-gray",
            "data-role": "result-editor",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "name": "code-editor-1",
              "onChange": [Function],
              "readOnly": true,
              "value": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
